crates/mesh-parser/tests/snapshots/parser_tests__actor_def_simple.snap
---
source: crates/mesh-parser/tests/parser_tests.rs
expression: "source_and_debug(\"actor Counter do\\n  0\\nend\")"
---
SOURCE_FILE@0..20
  ACTOR_DEF@0..20
    ACTOR_KW@0..5 "actor"
    NAME@5..12
      IDENT@5..12 "Counter"
    DO_KW@12..14 "do"
    BLOCK@14..17
      NEWLINE@14..15 "\n"
      LITERAL@15..16
        INT_LITERAL@15..16 "0"
      NEWLINE@16..17 "\n"
    END_KW@17..20 "end"
  EOF@20..20 ""
