crates/mesh-parser/tests/snapshots/parser_tests__call_with_args.snap
---
source: crates/mesh-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"foo(1, 2, 3)\")"
---
SOURCE_FILE@0..10
  CALL_EXPR@0..10
    NAME_REF@0..3
      IDENT@0..3 "foo"
    ARG_LIST@3..10
      L_PAREN@3..4 "("
      LITERAL@4..5
        INT_LITERAL@4..5 "1"
      COMMA@5..6 ","
      LITERAL@6..7
        INT_LITERAL@6..7 "2"
      COMMA@7..8 ","
      LITERAL@8..9
        INT_LITERAL@8..9 "3"
      R_PAREN@9..10 ")"
  EOF@10..10 ""
