crates/mesh-parser/tests/snapshots/parser_tests__call_with_expr_arg.snap
---
source: crates/mesh-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"foo(a, b + c)\")"
---
SOURCE_FILE@0..10
  CALL_EXPR@0..10
    NAME_REF@0..3
      IDENT@0..3 "foo"
    ARG_LIST@3..10
      L_PAREN@3..4 "("
      NAME_REF@4..5
        IDENT@4..5 "a"
      COMMA@5..6 ","
      BINARY_EXPR@6..9
        NAME_REF@6..7
          IDENT@6..7 "b"
        PLUS@7..8 "+"
        NAME_REF@8..9
          IDENT@8..9 "c"
      R_PAREN@9..10 ")"
  EOF@10..10 ""
