crates/mesh-parser/tests/snapshots/parser_tests__case_with_tuple_patterns.snap
---
source: crates/mesh-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"case point do\\n  (0, 0) -> \\\"origin\\\"\\n  (x, y) -> \\\"other\\\"\\nend\")"
---
SOURCE_FILE@0..46
  CASE_EXPR@0..46
    CASE_KW@0..4 "case"
    NAME_REF@4..9
      IDENT@4..9 "point"
    DO_KW@9..11 "do"
    NEWLINE@11..12 "\n"
    MATCH_ARM@12..27
      TUPLE_PAT@12..17
        L_PAREN@12..13 "("
        LITERAL_PAT@13..14
          INT_LITERAL@13..14 "0"
        COMMA@14..15 ","
        LITERAL_PAT@15..16
          INT_LITERAL@15..16 "0"
        R_PAREN@16..17 ")"
      ARROW@17..19 "->"
      STRING_EXPR@19..27
        STRING_START@19..20 "\""
        STRING_CONTENT@20..26 "origin"
        STRING_END@26..27 "\""
    NEWLINE@27..28 "\n"
    MATCH_ARM@28..42
      TUPLE_PAT@28..33
        L_PAREN@28..29 "("
        IDENT_PAT@29..30
          IDENT@29..30 "x"
        COMMA@30..31 ","
        IDENT_PAT@31..32
          IDENT@31..32 "y"
        R_PAREN@32..33 ")"
      ARROW@33..35 "->"
      STRING_EXPR@35..42
        STRING_START@35..36 "\""
        STRING_CONTENT@36..41 "other"
        STRING_END@41..42 "\""
    NEWLINE@42..43 "\n"
    END_KW@43..46 "end"
  EOF@46..46 ""
