crates/mesh-parser/tests/snapshots/parser_tests__case_with_when_guard.snap
---
source: crates/mesh-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"case x do\\n  n when n > 0 -> n\\n  _ -> 0\\nend\")"
---
SOURCE_FILE@0..28
  CASE_EXPR@0..28
    CASE_KW@0..4 "case"
    NAME_REF@4..5
      IDENT@4..5 "x"
    DO_KW@5..7 "do"
    NEWLINE@7..8 "\n"
    MATCH_ARM@8..19
      IDENT_PAT@8..9
        IDENT@8..9 "n"
      WHEN_KW@9..13 "when"
      BINARY_EXPR@13..16
        NAME_REF@13..14
          IDENT@13..14 "n"
        GT@14..15 ">"
        LITERAL@15..16
          INT_LITERAL@15..16 "0"
      ARROW@16..18 "->"
      NAME_REF@18..19
        IDENT@18..19 "n"
    NEWLINE@19..20 "\n"
    MATCH_ARM@20..24
      WILDCARD_PAT@20..21
        IDENT@20..21 "_"
      ARROW@21..23 "->"
      LITERAL@23..24
        INT_LITERAL@23..24 "0"
    NEWLINE@24..25 "\n"
    END_KW@25..28 "end"
  EOF@28..28 ""
