crates/mesh-parser/tests/snapshots/parser_tests__closure_bare_two_params.snap
---
source: crates/mesh-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"fn x, y -> x + y end\")"
---
SOURCE_FILE@0..13
  CLOSURE_EXPR@0..13
    FN_KW@0..2 "fn"
    PARAM_LIST@2..5
      PARAM@2..3
        IDENT@2..3 "x"
      COMMA@3..4 ","
      PARAM@4..5
        IDENT@4..5 "y"
    ARROW@5..7 "->"
    BLOCK@7..10
      BINARY_EXPR@7..10
        NAME_REF@7..8
          IDENT@7..8 "x"
        PLUS@8..9 "+"
        NAME_REF@9..10
          IDENT@9..10 "y"
    END_KW@10..13 "end"
  EOF@13..13 ""
