crates/mesh-parser/tests/snapshots/parser_tests__closure_do_end_body.snap
---
source: crates/mesh-parser/tests/parser_tests.rs
expression: "source_and_debug(\"let f = fn x do\\n  let y = x * 2\\n  y + 1\\nend\")"
---
SOURCE_FILE@0..27
  LET_BINDING@0..27
    LET_KW@0..3 "let"
    NAME@3..4
      IDENT@3..4 "f"
    EQ@4..5 "="
    CLOSURE_EXPR@5..27
      FN_KW@5..7 "fn"
      PARAM_LIST@7..8
        PARAM@7..8
          IDENT@7..8 "x"
      DO_KW@8..10 "do"
      BLOCK@10..24
        NEWLINE@10..11 "\n"
        LET_BINDING@11..19
          LET_KW@11..14 "let"
          NAME@14..15
            IDENT@14..15 "y"
          EQ@15..16 "="
          BINARY_EXPR@16..19
            NAME_REF@16..17
              IDENT@16..17 "x"
            STAR@17..18 "*"
            LITERAL@18..19
              INT_LITERAL@18..19 "2"
        NEWLINE@19..20 "\n"
        BINARY_EXPR@20..23
          NAME_REF@20..21
            IDENT@20..21 "y"
          PLUS@21..22 "+"
          LITERAL@22..23
            INT_LITERAL@22..23 "1"
        NEWLINE@23..24 "\n"
      END_KW@24..27 "end"
  EOF@27..27 ""
