crates/mesh-parser/tests/snapshots/parser_tests__closure_do_end_no_params.snap
---
source: crates/mesh-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"fn do 42 end\")"
---
SOURCE_FILE@0..9
  CLOSURE_EXPR@0..9
    FN_KW@0..2 "fn"
    DO_KW@2..4 "do"
    BLOCK@4..6
      LITERAL@4..6
        INT_LITERAL@4..6 "42"
    END_KW@6..9 "end"
  EOF@9..9 ""
