crates/mesh-parser/tests/snapshots/parser_tests__closure_guard_clause.snap
---
source: crates/mesh-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"fn x when x > 0 -> x end\")"
---
SOURCE_FILE@0..16
  CLOSURE_EXPR@0..16
    FN_KW@0..2 "fn"
    PARAM_LIST@2..3
      PARAM@2..3
        IDENT@2..3 "x"
    GUARD_CLAUSE@3..10
      WHEN_KW@3..7 "when"
      BINARY_EXPR@7..10
        NAME_REF@7..8
          IDENT@7..8 "x"
        GT@8..9 ">"
        LITERAL@9..10
          INT_LITERAL@9..10 "0"
    ARROW@10..12 "->"
    BLOCK@12..13
      NAME_REF@12..13
        IDENT@12..13 "x"
    END_KW@13..16 "end"
  EOF@16..16 ""
